Fix nav bar visibility - change top position to 50px

--- a/OwnPage/styles.css
+++ b/OwnPage/styles.css
@@ -84,10 +84,10 @@ footer{
     
 nav ul {
     list-style-type: none;
-    position: relative;
-    top: 0;
-    left: 0;
-    transform: none;
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
     width: 450px;
     height: 50px;
     background: rgba(157, 252, 249, 0.8);
